// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Heading /> should render Heading with default properties 1`] = `
<Text
  accessibilityRole="header"
  color="hsla(217, 56%, 17%, 1)"
  fontFamily="Lato"
  fontSize="17px"
  fontStyle="normal"
  fontWeight={700}
  lineHeight="24px"
  style={
    Array [
      Object {
        "color": "hsla(217, 56%, 17%, 1)",
        "fontFamily": "Lato",
        "fontSize": 17,
        "fontStyle": "normal",
        "fontWeight": "700",
        "lineHeight": 24,
        "marginBottom": 0,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": 0,
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
        "textAlign": "left",
        "textDecorationLine": "none",
      },
    ]
  }
  textAlign="left"
  textDecorationLine="none"
>
  Get Started With Payment Gateway
</Text>
`;

exports[`<Heading /> should render Heading with variant "large" 1`] = `
<Text
  accessibilityRole="header"
  color="hsla(217, 18%, 45%, 1)"
  fontFamily="Lato"
  fontSize="20px"
  fontStyle="normal"
  fontWeight={400}
  lineHeight="28px"
  style={
    Array [
      Object {
        "color": "hsla(217, 18%, 45%, 1)",
        "fontFamily": "Lato",
        "fontSize": 20,
        "fontStyle": "normal",
        "fontWeight": "400",
        "lineHeight": 28,
        "marginBottom": 0,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": 0,
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
        "textAlign": "left",
        "textDecorationLine": "none",
      },
    ]
  }
  textAlign="left"
  textDecorationLine="none"
>
  Get Started With Payment Gateway
</Text>
`;

exports[`<Heading /> should render Heading with variant "medium" 1`] = `
<Text
  accessibilityRole="header"
  color="hsla(216, 16%, 60%, 1)"
  fontFamily="Lato"
  fontSize="18px"
  fontStyle="normal"
  fontWeight={400}
  lineHeight="28px"
  style={
    Array [
      Object {
        "color": "hsla(216, 16%, 60%, 1)",
        "fontFamily": "Lato",
        "fontSize": 18,
        "fontStyle": "normal",
        "fontWeight": "400",
        "lineHeight": 28,
        "marginBottom": 0,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": 0,
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
        "textAlign": "left",
        "textDecorationLine": "none",
      },
    ]
  }
  textAlign="left"
  textDecorationLine="none"
>
  Get Started With Payment Gateway
</Text>
`;

exports[`<Heading /> should render Heading with variant "small" 1`] = `
<Text
  accessibilityRole="header"
  color="hsla(217, 56%, 17%, 1)"
  fontFamily="Lato"
  fontSize="17px"
  fontStyle="normal"
  fontWeight={400}
  lineHeight="24px"
  style={
    Array [
      Object {
        "color": "hsla(217, 56%, 17%, 1)",
        "fontFamily": "Lato",
        "fontSize": 17,
        "fontStyle": "normal",
        "fontWeight": "400",
        "lineHeight": 24,
        "marginBottom": 0,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": 0,
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
        "textAlign": "left",
        "textDecorationLine": "none",
      },
    ]
  }
  textAlign="left"
  textDecorationLine="none"
>
  Get Started With Payment Gateway
</Text>
`;

exports[`<Heading /> should render Heading with variant "small" and contrast "high" 1`] = `
<Text
  accessibilityRole="header"
  color="hsla(0, 0%, 100%, 1)"
  fontFamily="Lato"
  fontSize="17px"
  fontStyle="normal"
  fontWeight={400}
  lineHeight="24px"
  style={
    Array [
      Object {
        "color": "hsla(0, 0%, 100%, 1)",
        "fontFamily": "Lato",
        "fontSize": 17,
        "fontStyle": "normal",
        "fontWeight": "400",
        "lineHeight": 24,
        "marginBottom": 0,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": 0,
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
        "textAlign": "left",
        "textDecorationLine": "none",
      },
    ]
  }
  textAlign="left"
  textDecorationLine="none"
>
  Get Started With Payment Gateway
</Text>
`;

exports[`<Heading /> should render Heading with variant "subheading" and weight "bold" 1`] = `
<Text
  accessibilityRole="header"
  color="hsla(217, 18%, 45%, 1)"
  fontFamily="Lato"
  fontSize="12px"
  fontStyle="normal"
  fontWeight={700}
  lineHeight="16px"
  style={
    Array [
      Object {
        "color": "hsla(217, 18%, 45%, 1)",
        "fontFamily": "Lato",
        "fontSize": 12,
        "fontStyle": "normal",
        "fontWeight": "700",
        "lineHeight": 16,
        "marginBottom": 0,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": 0,
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
        "textAlign": "left",
        "textDecorationLine": "none",
      },
    ]
  }
  textAlign="left"
  textDecorationLine="none"
>
  Get Started With Payment Gateway
</Text>
`;
